
* 3.1.0 *

* Quote most time objects to use ISO8601 format to be multi-language dateformat compatible. The [datetime] data type is
  automatically limited to milliseconds while [time] & [datetimeoffset] have full support. Even included a Date/Time 
  ActiveSupport formatter that is used per the language settings of the connection.

* Include a visit_Arel_Nodes_UpdateStatement method in our Arel visitor to add a limit/top for update
  that has order and no limit/top. https://github.com/rails/rails/commit/787194ee43ab1fb0a7dc8bfbbfbd5079b047d833
  
* Allow drop_database to be called even when DB does not exist.

* Remove totally broken ADONET connection mode. Want it back, submit a patch.

* Schema reflection now finds primary key for all occasions. Fixed #60 [Boško Ivanišević]

* Allow complex order objects to not be molested by our visitor overrides. Fixes #99

* Default unicode datatypes!

* New #lowercase_schema_reflection configuration that allows you to downcase all tables and columns.
  Good for legacy databases. Fixes #86. Thanks @dmajkic.

* Rails 3.1 with prepared statement support. Uses "EXEC sp_executesql ..." for just about everything now.


* 3.0.15 *

* Way better schema support! Thanks to @ianic! Fixes #61

* Warn of possible permission problems if "EXEC sp_helptext..." does not work view. Fixes #73.


* 3.0.13/3.0.14 *

* Allow TinyTDS/DBLIB mode to pass down :host/:port config options.


* 3.0.12 *

* Bug fix for previous TinyTDS lost connections.


* 3.0.11 *

* Azure compatibility.

* TinyTDS enhancements for lost connections. Default connection mode.


* 3.0.10 *

* Fix #rowtable_orders visitor helper to use first column if no pk column was found.

* Flatten sp_helpconstraint when looking for constraints just in case fks are present. Issue #64.

* Start to support 2011 code named "Denali".

* Limit and Offset can take SqlLiteral objects now.


* 3.0.9 *

* Fix array literal parsing bug for ruby 1.9.


* 3.0.8 *
