@@ -167,7 +167,7 @@ module ActiveRecord
       
       cattr_accessor :native_text_database_type, :native_binary_database_type, :native_string_database_type,
                      :log_info_schema_queries, :enable_default_unicode_types, :auto_connect,
-                     :cs_equality_operator, :lowercase_schema_reflection
+                     :cs_equality_operator, :lowercase_schema_reflection, :auto_connect_duration
       
       self.enable_default_unicode_types = true
       
@@ -310,6 +310,10 @@ module ActiveRecord
         @@auto_connect.is_a?(FalseClass) ? false : true
       end
       
+      def auto_connect_duration
+        @@auto_connect_duration ||= 10
+      end
+      
       def native_string_database_type
         @@native_string_database_type || (enable_default_unicode_types ? 'nvarchar' : 'varchar') 
       end
@@ -443,7 +447,7 @@ module ActiveRecord
         return false unless auto_connect
         @auto_connecting = true
         count = 0
-        while count <= 5
+        while count <= (auto_connect_duration / 2)
           sleep 2** count
           ActiveRecord::Base.did_retry_sqlserver_connection(self,count)
           return true if reconnect!
